# pico_fota_example

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  tcp_server.py
example_app/: CMakeLists.txt  main.c
port/: FreeRTOSConfig.h  freertos.c  lwipopts.h  lwipopts_examples_common.h
